<resources>
    <string name="app_name">Assignment2</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER USER</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_title">LOGIN</string>
    <string name="create_new_account">Create new account</string>
    <string name="johnny">Johnny Hui (A00973103)</string>
    <string name="gavin">Gavin Knoke (A01233027)</string>
    <string name="monthYearCases">Cases by Month &amp; Year</string>
    <string name="healthAuthCases">Cases by Health Authority</string>
    <string name="genderCases">Cases by Gender</string>
    <string name="ageGroupCases">Cases by Age Group</string>
    <string name="logoutBtnTag">Log Out</string>
    <string name="app_title">COVID APP</string>
    <string name="fullNameRegister">Full Name</string>
    <string name="age">Age</string>
    <string name="yearTag">Year</string>
    <string name="monthTag">Month</string>
    <string name="findButtonTag">Find</string>
    <string name="backButtonTag">BACK</string>
    <string name="underlineTextView"><u>TextView</u></string>
    <string name="genderHeader"><b>Gender: %1$s</b></string>
    <string name="classificationHeader"><b>Classification: %1$s</b></string>
    <string name="HAHeader"><b>Health Authority: %1$s</b></string>
    <string name="ageHeader"><b>Age: %1$s</b></string>

    <string name="maleCasesHeader">Male Cases: %1$s</string>
    <string name="femaleCasesHeader">Female Cases: %1$s</string>

    <string name="fraserHeader"><b>Fraser: %1$s</b></string>
    <string name="interiorHeader"><b>Interior: %1$s</b></string>
    <string name="northernHeader"><b>Northern: %1$s</b></string>
    <string name="outOfCanadaHeader"><b>Out of Canada: %1$s</b></string>
    <string name="vanCoastalHeader"><b>Vancouver Coastal: %1$s</b></string>
    <string name="vanIslandHeader"><b>Vancouver Island: %1$s</b></string>
    <string name="back">Back</string>

    <string name="ages10BelowHeader">Ages less than 10: %1$s</string>
    <string name="agesTenTo19Header">Ages 10 to 19: %1$s</string>
    <string name="agesTwentyTo29Header">Ages 20 to 29: %1$s</string>
    <string name="agesThirtyTo39Header">Ages 30 to 39: %1$s</string>
    <string name="agesFortyTo49Header">Ages 40 to 49: %1$s</string>
    <string name="agesFiftyTo59Header">Ages 50 to 59: %1$s</string>
    <string name="agesSixtyTo69Header">Ages 60 to 69: %1$s</string>
    <string name="agesSeventyTo79Header">Ages 70 to 79: %1$s</string>
    <string name="agesEightyTo89Header">Ages 80 to 89: %1$s</string>
    <string name="ages90PlusHeader">Ages 90+: %1$s</string>

    <string-array name="years">
        <item>2020</item>
        <item>2021</item>
    </string-array>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>