<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/johnny"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/johnny"
        android:textAlignment="center"
        android:textSize="20sp"
        android:translationY="-200px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gavin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gavin"
        android:textAlignment="center"
        android:textSize="20sp"
        android:translationY="-180px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/caseMonthYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monthYearCases"
        android:translationY="-30dp" />

    <Button
        android:id="@+id/caseByAuthority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/healthAuthCases"
        android:translationY="-15dp" />

    <Button
        android:id="@+id/caseByGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genderCases" />

    <Button
        android:id="@+id/caseByAgeGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ageGroupCases"
        android:translationY="15dp" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_200"
        android:text="@string/logout"
        android:translationY="100dp" />

    <TextView
        android:id="@+id/emailTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center" />

</LinearLayout>