<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/tvApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="60sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:fontFamily="sans-serif-black"
        android:layout_gravity="center"
        android:textColor="@android:color/holo_purple"
        android:text="@string/create_new_account" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/fullName"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:autofillHints="emailAddress"
            android:hint="@string/fullNameRegister"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/age"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/age"
            android:inputType="number"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:autofillHints="emailAddress"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:backgroundTint="@color/teal_200"
            android:text="@string/register" />

    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:minWidth="250dp"
        android:layout_marginTop="20dp"
        android:max="100"
        android:indeterminate="true"
        android:visibility="invisible"
        android:layout_gravity="center"
        android:progress="1" />

</LinearLayout>